--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     },
     "devDependencies": {
         "axios": "^0.17",
+        "bootstrap": "^3.3.7",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
-        "vue": "^2.5.7"
+        "less": "^2.7.3",
+        "less-loader": "^4.0.5",
+        "rtlcss": "^2.2.1"
     }
 }
