--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "^3.3.7",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "less": "^2.7.3",
