--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "rtlcss": "^2.2.1",
         "toastr": "^2.1.4",
         "vue": "^2.5.13"
+    },
+    "dependencies": {
+        "vue-infinite-scroll": "^2.0.2"
     }
 }
