--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "intervention/image": "^2.4",
         "jenssegers/mongodb": "^3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "morilog/jalali": "^2.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
