--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cross-env": "^5.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.2",
+        "jquery-confirm": "^3.3.2",
         "laravel-mix": "^1.0",
         "less": "^2.7.3",
         "less-loader": "^4.0.5",
