--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "jenssegers/mongodb": "^3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "morilog/jalali": "^2.3"
+        "morilog/jalali": "^2.3",
+        "sleimanx2/plastic": "^0.5.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
